apps/autoderf2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: autoderf2
  labels:
    app: autoderf2
spec:
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: 80
